--- a/PopulationExplore.ipynb
+++ b/PopulationExplore.ipynb
@@ -21,7 +21,7 @@
      "source": [
       "All maps were downloaded from [NASA's Socioeconomic Data and Applications Center (SEDAC)](http://sedac.ciesin.columbia.edu/data/set/gpw-v3-population-density/data-download).\n",
       "\n",
-      "The maps have native 2.5'x2.5' resolution, meaning that there resolution in square kilometers degrades towards the poles.\n",
+      "The maps have native 2.5'x2.5' resolution, meaning that their resolution in square kilometers degrades towards the poles.\n",
       "\n",
       "Note all calculations use adjusted 2000 population data; I discovered later that projected population data is also available.\n",
       "\n",
