--- a/PopulationExplore.ipynb
+++ b/PopulationExplore.ipynb
@@ -48,7 +48,7 @@
       "\n",
       "Russia contains 17% of the world's land area and 2.5% of its population.  18% of its population lives in the 'rural' category; 4-20 people per square kilometer.  That could be a difficult region to cover, especially with geosynchronous satellites.  For instance, Russian TV uses [an elliptical 12 hour orbit \"Molniya\"](http://en.wikipedia.org/wiki/Molniya_orbit).\n",
       "\n",
-      "<a href='#plotEasternEurope'>Eastern Europe</a> may be a good canditate for drones -- 37% of the population lives in the 20-100 people\n",
+      "<a href='#plotEasternEurope'>Eastern Europe</a> may be a good candidate for drones -- 37% of the population lives in the 20-100 people\n",
       "per square kilometer range, and the region is reasonably compact.\n"
      ]
     },
@@ -64,7 +64,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "I broke calculation down into several pieces.  Here are links to each section, which first contains a summary, and follows with calculations/plots that were used to determine those numbers.\n",
+      "I broke the calculation down into several pieces.  Here are links to each section, which first contains a summary, and follows with calculations/plots that were used to determine those numbers.\n",
       "\n",
       "* <a href='#getareadata'>Import/sanity check the land area data.</a>\n",
       "* <a href='#getpopdata'>Import/sanity check the population data.</a>\n",
