Added link to world pop density zone maps.

--- a/PopulationExplore.ipynb
+++ b/PopulationExplore.ipynb
@@ -38,7 +38,7 @@
      "source": [
       "##Summary:\n",
       "\n",
-      "I reproduced numbers on the world's population density distribution given in the internet.org video/whitepaper (with the caveat that the data is from 2000) and developed tools to plot and summarize information per country, per region, or by UN classification (developed/developing/least developed).  The population density can be plotted continuously, or in bins corresponding to regions with different technology targets.  For this purpose I chose population density bins of < 4 (no coverage?), 4-20 (satellites), 20-100 (drones), and >100 (urban/traditional infrastructure?) people per square kilometer.  Averaged over the world, this breakdown corresponds to 0.9%, 4.7%, 15%, 80% of the world's population in these zones.  The fraction of land area in these bins is 53.6%, 22.3%, 15%, and 10%.\n",
+      "I reproduced numbers on the world's population density distribution given in the internet.org video/whitepaper (with the caveat that the data is from 2000) and developed tools to plot and summarize information per country, per region, or by UN classification (developed/developing/least developed).  The population density can be plotted continuously, or in bins corresponding to regions with different technology targets.  For this purpose I chose population density bins of < 4 (no coverage?), 4-20 (satellites), 20-100 (drones), and >100 (urban/traditional infrastructure?) people per square kilometer.  Averaged over the world, this breakdown corresponds to 0.9%, 4.7%, 15%, 80% of the world's population in these zones.  The fraction of land area in these bins is 53.6%, 22.3%, 15%, and 10%.  The map showing the distribution of these zones is <a href='#plotpdenszonesWorld'>here</a>.\n",
       "\n",
       "I first <a href='#plotUS'>examine the United States</a>, where I have some intuition about how the population is distributed and where the economic and cultural gradients are.  The western half of the US is sparsely populated, but still seems reasonably covered by 4 Mbps broadband.  In total, 95% of the US population has access to broadband.  It's difficult to tell, but a comparison with a broadband coverage map suggests that availability may also follow income (i.e., parts of the south have poor coverage yet reasonably high population density; this could be a pixelization effect though).  It's worth noting that satellite internet is already an [option](http://internet.hughesnet.com/) in the US.\n",
       "\n",
@@ -1163,6 +1163,13 @@
       "* India and China alone contain 37% of the world's population (2000 numbers.. more now?), and most live in urban areas.  India is 97% urban!'\n",
       "* The swath of light in Africa, up through Saudi Arabia and north could be a good candidate region for satellite coverage?\n",
       "* Eastern Europe may be a target for drones (big, relatively connected yellow region)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<a id='plotpdenszonesWorld'</a>"
      ]
     },
     {
